# pom-ppia

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  MEMORY.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: llm-providers.yaml
src/: __main__.py
src/application/dto/: generation_result.py
src/application/use_cases/generate_claude/: generate_claude_handler.py
src/application/use_cases/generate_cucumber/: generate_cucumber_handler.py
src/application/use_cases/generate_playwright/: generate_playwright_handler.py
src/application/use_cases/generate_pom/: generate_pom_handler.py
src/application/use_cases/process_tests/: process_tests_command.py  process_tests_handler.py
src/domain/model/: pom_structure.py  selector.py  test_file.py  test_step.py
src/domain/repository/: llm_service.py  output_generator.py  test_repository.py
src/domain/service/: test_analyzer.py
src/infrastructure/: exceptions.py
src/infrastructure/ai/openai/: openai_llm_service.py  prompt_builder.py
src/infrastructure/cli/: interactive_selector.py  main.py  output_formatter.py
src/infrastructure/config/: dependency_injection.py  settings.py
src/infrastructure/persistence/filesystem/: file_test_repository.py  markdown_output_generator.py
